# otherchannel

./: .gitignore  package-lock.json  package.json  readme.md
.vitepress/: config.mts  otherChannel.ts
JavaScript/other/: TEST.html  test.js  test1.js
Rust/guessing_game/src/: guess-number.rs
Rust/httpie/: Cargo.toml
Rust/httpie/src/: main.rs
Rust/learnTest/src/: main.rs
Rust/scrape_url/: Cargo.toml  rust.md
Rust/scrape_url/src/: main.rs
Rust/testcase/src/: main.rs
docs/: index.md  package-lock.json  package.json  types.ts
docs/.vitepress/: config.mts
docs/public/: 404.html  index.html
docs/public/FrontEnd/: index.html
docs/public/static/: FrontEnd_CascadingStyleSheets_index.md.Cu2sqYDo.lean.js  FrontEnd_JavaScript_Angular_index.md.DyUsJP63.lean.js  FrontEnd_JavaScript_CommonSyntax_index.md.DoCG2Rk7.js  FrontEnd_JavaScript_CommonSyntax_index.md.DoCG2Rk7.lean.js  FrontEnd_JavaScript_React_index.md.bWMgRBjH.js  FrontEnd_JavaScript_Vue_index.md.BfhxfZrJ.lean.js  FrontEnd_index.md.BlDhCyNX.js  index.md.BYlUOhx3.lean.js
docs/src/: index.md  underline.html
docs/src/BackEnd/: Java.md  Navicat.md
docs/src/FrontEnd/: index.md
docs/src/LLM/: index.md
docs/src/Rust/: index.md  (+2 more)
public/: hashmap.json
public/static/: FrontEnd_ComponentLibrary_index.md.BmfsJDYR.js  FrontEnd_HypertextMark-upLanguage_index.md.CxWon1Lr.lean.js  FrontEnd_JavaScript_AdvancedSyntax_index.md.KFor-XXS.lean.js  FrontEnd_JavaScript_index.md.Dke_sx1N.lean.js  app.BCH5jRsA.js  style.BgaCv2Nw.css
src/BackEnd/: index.md
src/FrontEnd/: index.md
src/Rust/: installRust.md
(+67 files in other folders)
